--- a/src/components/Flat/styles.module.scss
+++ b/src/components/Flat/styles.module.scss
@@ -7,13 +7,13 @@
   background: #fff;
 
   .banner {
-      .slide {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+    .slide {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   .containerUser {
@@ -33,7 +33,7 @@
         width: 50px;
         height: 50px;
         max-width: 50px;
-        max-height:50px ;
+        max-height: 50px;
         min-width: 50px;
         min-height: 50px;
         border-radius: 100%;
@@ -41,8 +41,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
-       
       }
 
       .userInformation {
@@ -144,4 +142,8 @@
       }
     }
   }
+}
+
+.favourites {
+  color: #000;
 }
