--- a/src/page/Profile/styles.module.scss
+++ b/src/page/Profile/styles.module.scss
@@ -1,4 +1,5 @@
 .profile {
+  color: #fff;
   width: min(100%, 1000px);
   margin-inline: auto;
   padding: 2rem 1rem;
@@ -28,13 +29,13 @@
     }
 
     .userInformation {
+      color: #fff;
       margin-left: 1rem;
 
       h1 {
         font-size: 22px;
         font-weight: 600;
       }
-    
     }
   }
 
@@ -81,7 +82,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
 
-      @media(min-width: 800px) {
+      @media (min-width: 800px) {
         width: 50%;
       }
     }
@@ -129,11 +130,8 @@
             top: -5px;
             right: -10px;
             font-size: 90%;
-
           }
         }
-
-
 
         p {
           margin-left: 1rem;
@@ -186,8 +184,6 @@
       font-size: 20px;
       text-align: center;
     }
-
-
   }
 
   .buttons {
