--- a/src/components/Flat/styles.module.scss
+++ b/src/components/Flat/styles.module.scss
@@ -33,9 +33,21 @@
   gap: 2rem;
 }
 
+.remove_btn {
+  padding: 10px 0;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
 .flat {
   padding-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 10px;
   width: 100%;
   border-radius: 10px;
   overflow: hidden;
