fix(flats -> profile) fix 404 status when try go to flat page

--- a/src/page/FlatDetail/styles.module.scss
+++ b/src/page/FlatDetail/styles.module.scss
@@ -131,8 +131,6 @@
           display: flex;
           align-items: center;
           justify-content: center;
-
-          
         }
 
         .userInformation {
@@ -420,4 +418,11 @@
       }
     }
   }
+}
+
+.loadInfo {
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  margin-top: 21px;
 }
