--- a/src/page/ChatDetail/styles.module.scss
+++ b/src/page/ChatDetail/styles.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100vh;
   margin-bottom: 250px;
+  position: relative;
 
   .noneMessages {
     font-size: 17px;
@@ -14,7 +15,7 @@
     width: 100%;
     height: auto;
     padding: 1rem 0.5rem;
-    background: #FFF;
+    background: #fff;
     position: relative;
     margin-top: -10px;
     border-radius: 10px;
@@ -32,6 +33,7 @@
   .messages {
     margin-top: 20px;
     padding: 0 10px;
+    padding-bottom: 90px; // Высота формы ввода
   }
 
   .anxiety {
@@ -40,7 +42,7 @@
     position: fixed;
     bottom: 90px;
     left: 10px;
-    background: #F64141;
+    background: #f64141;
     padding: 15px 30px;
     border-radius: 10px;
     display: flex;
@@ -61,7 +63,7 @@
     z-index: 100;
     padding-bottom: 20px;
     bottom: 60px;
-    background: #FFF;
+    background: #fff;
     left: 0;
     right: 0;
     border-radius: 10px;
@@ -69,15 +71,15 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    @media(min-width: 650px) {
+    @media (min-width: 650px) {
       grid-template-columns: repeat(3, 1fr);
     }
 
-    @media(min-width: 900px) {
+    @media (min-width: 900px) {
       grid-template-columns: repeat(4, 1fr);
     }
 
-    @media(min-width: 1250px) {
+    @media (min-width: 1250px) {
       grid-template-columns: repeat(5, 1fr);
     }
 
@@ -101,7 +103,7 @@
     height: max-content;
     padding: 0px 15px;
     padding-bottom: 15px;
-    background: #FFF;
+    background: #fff;
     position: fixed;
     bottom: 0;
     display: grid;
@@ -159,4 +161,11 @@
       background: #8a88ff;
     }
   }
+}
+
+.goToBottom {
+  position: absolute;
+  top: 100%;
+  width: 10px;
+  height: 10px;
 }
