fix(notofication) remove notification count

--- a/src/page/Home/styles.module.scss
+++ b/src/page/Home/styles.module.scss
@@ -27,18 +27,18 @@
       height: 60%;
     }
 
-    .new_messages_count {
-      width: 23px;
-      height: 23px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #f51717;
-      border-radius: 50%;
-      position: absolute;
-      top: -3px;
-      right: -3px;
-    }
+    // .new_messages_count {
+    //   width: 23px;
+    //   height: 23px;
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: center;
+    //   background: #f51717;
+    //   border-radius: 50%;
+    //   position: absolute;
+    //   top: -3px;
+    //   right: -3px;
+    // }
   }
 
   .stories_module {
