--- a/src/components/Flat/styles.module.scss
+++ b/src/components/Flat/styles.module.scss
@@ -193,4 +193,9 @@
 
 .favourites {
   color: #000;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 5px 0;
+  text-align: center;
 }
