--- a/src/page/Neighbors/styles.module.scss
+++ b/src/page/Neighbors/styles.module.scss
@@ -1,5 +1,4 @@
 .neighbors {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,16 +8,16 @@
     margin-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
-width: 800px;
-gap: 20px;
+    width: 99%;
+    gap: 20px;
+    justify-content: center;
+    align-items: flex-start;
     .neigh {
       width: 390px;
-      height: 300px;
+      height: 100%;
     }
 
-    justify-content: center;
-
-    @media(min-width: 850px) {
+    @media (min-width: 850px) {
       grid-template-columns: repeat(2, 1fr);
     }
   }
