--- a/src/page/Favourites/styles.module.scss
+++ b/src/page/Favourites/styles.module.scss
@@ -17,6 +17,7 @@
         padding: 2rem;
         max-width: 800px;
         margin-inline: auto;
+        justify-content: center;
 
         @media screen and (min-width: 800px) {
           display: grid;
