--- a/src/components/RegistrationPage/styles.module.scss
+++ b/src/components/RegistrationPage/styles.module.scss
@@ -16,5 +16,9 @@
     margin-bottom: 3rem;
     font-size: 0.8rem;
     opacity: 0.6;
+
+    a {
+      text-decoration: underline dashed;
+    }
   }
 }
