--- a/src/components/SignInSocial/styles.module.scss
+++ b/src/components/SignInSocial/styles.module.scss
@@ -1,3 +1,28 @@
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  background: #FF6060;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+
+  button {
+    margin-top: .7rem;
+    text-decoration: underline dashed;
+    font-size: smaller;
+  }
+}
+
 .or {
   margin: 0.8rem;
   font-size: 0.8rem;
