--- a/src/page/Sign/styles.module.scss
+++ b/src/page/Sign/styles.module.scss
@@ -1,3 +1,8 @@
+.header {
+  margin-bottom: .7rem;
+  text-align: center;
+}
+
 .haveAccount {
   display: flex;
   gap: 0.2rem;
@@ -17,6 +22,7 @@
 }
 
 .captcha {
+  margin-bottom: 1rem;
 }
 
 .mar1 {
