--- a/src/page/Profile/styles.module.scss
+++ b/src/page/Profile/styles.module.scss
@@ -1,3 +1,17 @@
+.description {
+  font-size: 18px;
+
+  textarea {
+    color: #000;
+    font-size: 16px;
+    height: 50px;
+    resize: none;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 0 10px;
+  }
+}
+
 .profile {
   color: #fff;
   width: min(100%, 1000px);
